--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -10,6 +10,7 @@
     table tr {border: black 1px solid}
     table tr td {border: black 1px solid}
     table tr th {border: black 1px solid}
+</style>
     </head>
 <body>
     <h1>List</h1>
@@ -17,13 +18,22 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col" class="text-center">제목</th>
-                <th scope="col" class="text-center">글쓴이</th>
-                <th scope="col" class="text-center">작성일</th>
-                <th scope="col" class="text-center">조회수</th>
+                <th class="text-center">글번호</th>
+                <th class="text-center">제목</th>
+                <th class="text-center">글쓴이</th>
+                <th class="text-center">작성일</th>
+                <th class="text-center">조회수</th>
             </tr>
         </thead>
+        <tbody>
+                <td class="text-center">1</td>
+                <td class="text-center">테스트</td>
+                <td class="text-center">홍길동</td>
+                <td class="text-center">2020-12-01</td>
+                <td class="text-center">10</td>
+        </tbody>
     </table>
+    
     <script>
         document.getElementById('home').addEventListener('click', e => {location.href = '/'})
     </script>
