--- a/src/main/resources/templates/articles/update.html
+++ b/src/main/resources/templates/articles/update.html
@@ -14,21 +14,32 @@
 </head>
 <body>
     <h1>Update</h1>
-    <a id="home" href="#"></a>
+    <a id="home" href="#"> Go Home </a>
     <table class="table">
         <thead>
+            
             <tr class="table-active">
-                <th scope="col" style="width: 60%"><%=dto.getBdTitle()%><br>
-                    <%=dto.getBdUserID()%></th>
-                <th scope="col" style="width: 40%" class="text-right">조회 :
-                    <br></th>
+                <th  style="width: 10%">글번호 : <span id="artNum">1</span></th>
+                <th  style="width: 30%">글쓴이ID : <span id="writerId">hong</span></th>
+                <th  style="width: 30%">수정일 : <span id="regdate">2020-12-01</span></th>
+                <th  style="width: 30%">조회수 : <span id="count">100</span></th>
+                
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><pre></pre></td>
-            </tr>
+            
+            <tr><td colspan="4" style="width: 100%"><span id="title">수정할 제목</span></td></tr>
+            <tr><td colspan="4" style="width: 100%">
+                    <textarea id="content">
+                        수정할 내용
+                    </textarea>
+                </td>
+                </tr>
         </tbody>
     </table>
+
+    <script>
+        document.getElementById('home').addEventListener('click', e => {location.href = '/'})
+   </script>
 </body>
 </html>
