--- a/src/main/resources/templates/articles/write.html
+++ b/src/main/resources/templates/articles/write.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <style>
+        table {border: black 1px solid}
+        table tr {border: black 1px solid}
+        table tr td {border: black 1px solid}
+        table tr th {border: black 1px solid}
+    </style>
 </head>
 <body>
     <h1>Write</h1>
@@ -13,6 +19,9 @@
         <input type="hidden" name="bdGroup" >
         <input type="hidden" name="bdOrder">
         <input type="hidden" name="bdIndent" >
+        <input type="text" name="bdTitle" 
+        placeholder="ID을 입력해주세요." required
+        ><br>
         <input type="text" name="bdTitle" 
             placeholder="제목을 입력해주세요." required
         >
