--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -13,26 +13,31 @@
     </style>
 </head>
 <body>
-    <h1>Detail</h1>
-    <a id="home" href="#"></a>
+    <h1> Detail </h1>
+    <a id="home" href="#"> Go Home </a>
     <table class="table">
         <thead>
             <tr class="table-active">
-                <th scope="col" style="width: 60%"><%=dto.getBdTitle()%><br>
-                    <%=dto.getBdUserID()%></th>
-                <th scope="col" style="width: 40%" class="text-right">조회 :
-                    <br></th>
+                <th style="width: 10%">글번호 : <span id="artNum">1</span></th>
+                <th style="width: 30%">글쓴이ID : <span id="writerId">hong</span></th>
+                <th style="width: 30%">작성일 : <span id="regDate">2020-12-01</span></th>
+                <th style="width: 30%">조회수 : <span id="count">100</span></th>
+                
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><pre></pre></td>
-            </tr>
+            
+            <tr><td colspan="4" style="width: 100%"><span id="title">테스트</span></td> </tr>
+            <tr><td colspan="4" style="width: 100%">
+                  <textarea id="content">
+                      게시글 테스트
+                  </textarea>
+                </td> </tr>
         </tbody>
     </table>
 
     <script>
-        document.getElementById('home').addEventListener('click', e => {location.href = '/'})
+        document.getElementById('home').addEventListener('click', e => { location.href="/"})
    </script>
 </body>
 </html>
